Fixes home page menu bar on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -235,6 +235,10 @@ tr:nth-child(even) {background-color: #090A0F59;}
     font-size: 40px;
   }
 
+  .top-container-shift{
+    top: 70%;
+  }
+
   .icons {
     font-size: 50px;
   }
